вывод фото в админке

--- a/web_site/templates/web_site/movie_detail.html
+++ b/web_site/templates/web_site/movie_detail.html
@@ -55,7 +55,7 @@ Single page
                                 </ul>
 
                                 <div class="card__description card__description--details">
-                                    {{ movie.description }}
+                                    {{ movie.description|safe }}
                                 </div>
                             </div>
                         </div>
