--- a/web_site/templates/web_site/index.html
+++ b/web_site/templates/web_site/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-
+{% load web_site_tags %}
 {% block title %}
 Main page
 {% endblock %}
@@ -52,7 +52,7 @@ Main page
                                     {% endfor %}
 									</span>
                                 <span class="card__rate"><i
-                                        class="icon ion-ios-star"></i>{{ movie.kinopoisk_rating }}</span>
+                                        class="icon ion-ios-star"></i>{% get_movie_rating movie.id %}</span>
                             </div>
                         </div>
                         <!-- end card -->
@@ -157,7 +157,7 @@ Main page
 											</span>
 
                                         <div class="card__wrap">
-                                            <span class="card__rate"><i class="icon ion-ios-star"></i>{{ movie.kinopoisk_rating}}</span>
+                                            <span class="card__rate"><i class="icon ion-ios-star"></i>{% get_movie_rating movie.id %}</span>
 
                                             <ul class="card__list">
                                                 <li>{{ movie.category }}</li>
@@ -197,7 +197,7 @@ Main page
                                         <a href="{{ item.get_absolute_url }}">{{ item.name|title }}</a>
                                     {% endfor %}
 									</span>
-                                <span class="card__rate"><i class="icon ion-ios-star"></i>{{ new_movie.kinopoisk_rating }}</span>
+                                <span class="card__rate"><i class="icon ion-ios-star"></i>{% get_movie_rating new_movie.id %}</span>
                             </div>
                         </div>
 
