--- a/templates/inc/_footer.html
+++ b/templates/inc/_footer.html
@@ -2,15 +2,6 @@
 <footer class="footer">
     <div class="container">
         <div class="row">
-            <!-- footer list -->
-            <div class="col-12 col-md-3">
-                <h6 class="footer__title">Download Our App</h6>
-                <ul class="footer__app">
-                    <li><a href="#"><img src="img/Download_on_the_App_Store_Badge.svg" alt=""></a></li>
-                    <li><a href="#"><img src="img/google-play-badge.png" alt=""></a></li>
-                </ul>
-            </div>
-            <!-- end footer list -->
 
             <!-- footer list -->
             <div class="col-6 col-sm-4 col-md-3">
@@ -39,7 +30,7 @@
                 <h6 class="footer__title">Contact</h6>
                 <ul class="footer__list">
                     <li><a href="tel:+18002345678">+1 (800) 234-5678</a></li>
-                    <li><a href="mailto:support@moviego.com">support@flixgo.com</a></li>
+                    <li><a href="mailto:support@moviego.com">support@gmail.com</a></li>
                 </ul>
                 <ul class="footer__social">
                     <li class="facebook"><a href="#"><i class="icon ion-logo-facebook"></i></a></li>
@@ -53,7 +44,7 @@
             <!-- footer copyright -->
             <div class="col-12">
                 <div class="footer__copyright">
-                    <small><a target="_blank" href="https://www.templateshub.net">Templates Hub</a></small>
+                    <small><a target="_blank" href="https://www.templateshub.net">Something yours</a></small>
 
                     <ul>
                         <li><a href="#">Terms of Use</a></li>
