--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
     <!-- Favicons -->
-    <link rel="icon" type="image/png" href="{% static 'icon/favicon-32x32.png" sizes="32x32' %}">
+    <link rel="icon" type="image/png" href="{% static 'icon/favicon-32x32.png' %}" sizes="32x32' %}">
     <link rel="apple-touch-icon" href="{% static 'icon/favicon-32x32.png' %}">
     <link rel="apple-touch-icon" sizes="72x72" href="{% static 'icon/apple-touch-icon-72x72.png' %}">
     <link rel="apple-touch-icon" sizes="114x114" href="{% static 'icon/apple-touch-icon-114x114.png' %}">
