--- a/web_site/templates/web_site/catalog_movies.html
+++ b/web_site/templates/web_site/catalog_movies.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 <!-- page title -->
-<section class="section section--first section--bg" data-bg="img/section/section.jpg">
+<section class="section section--first section--bg" data-bg="{% static 'img/section/section.jpg' %}">
     <div class="container">
         <div class="row">
             <div class="col-12">
