--- a/web_site/templates/web_site/movie_detail.html
+++ b/web_site/templates/web_site/movie_detail.html
@@ -198,9 +198,10 @@
                                                 <img class="comments__avatar" src="{% static 'img/user.png' %}" alt="">
                                                 <span class="comments__name">{{ review.name }}</span>
                                                 <span class="comments__time">{{ review.created_at }}</span>
-
+                                                {% if review.rating %}
                                                 <span class="reviews__rating"><i
                                                         class="icon ion-ios-star"></i>{{ review.rating }}</span>
+                                                {% endif %}
                                             </div>
                                             <p class="reviews__text">{{ review.text }}</p>
                                             <div class="comments__actions">
@@ -224,15 +225,14 @@
                                         {% endfor %}
                                     </ul>
 
-                                    <form action="{% url 'add_review' movie.id %}" method="post" class="form form_margin"
+                                    <form action="{% url 'add_review' movie.id %}" method="post"
+                                          class="form form_margin"
                                           id="formReview">
                                         <input type="hidden" value='' name="parent" id="contactparent">
                                         {% csrf_token %}
-                                        <input type="text" class="form__input" placeholder="Email" name="email">
-                                        <input type="text" class="form__input" placeholder="Ваше имя" name="name">
-
-                                        <textarea class="form__textarea" placeholder="Отзыв" name="text"
-                                                  id="contactcomment"></textarea>
+                                        {{ form.email }}
+                                        {{ form.name }}
+                                        {{ form.text }}
 
                                         <div class="form__item">
                                             <div class="form__label"></div>
@@ -240,11 +240,16 @@
                                                 <div class="rating__body">
                                                     <div class="rating__active"></div>
                                                     <div class="rating__items">
-                                                        <input type="radio" class="rating__item" value="1" name="rating">
-                                                        <input type="radio" class="rating__item" value="2" name="rating">
-                                                        <input type="radio" class="rating__item" value="3" name="rating">
-                                                        <input type="radio" class="rating__item" value="4" name="rating">
-                                                        <input type="radio" class="rating__item" value="5" name="rating">
+                                                        <input type="radio" class="rating__item" value="1"
+                                                               name="rating">
+                                                        <input type="radio" class="rating__item" value="2"
+                                                               name="rating">
+                                                        <input type="radio" class="rating__item" value="3"
+                                                               name="rating">
+                                                        <input type="radio" class="rating__item" value="4"
+                                                               name="rating">
+                                                        <input type="radio" class="rating__item" value="5"
+                                                               name="rating">
                                                     </div>
                                                     <div class="rating_value" style="line-height: 0"></div>
 
@@ -421,9 +426,5 @@
         </div>
     </div>
 </section>
-<!-- end content -->
-<script>
 
-
-</script>
 {% endblock %}
