--- a/templates/inc/_header.html
+++ b/templates/inc/_header.html
@@ -54,11 +54,17 @@
                             <button class="header__search-btn" type="button">
                                 <i class="icon ion-ios-search"></i>
                             </button>
-
-                            <a href="signin.html" class="header__sign-in">
-                                <i class="icon ion-ios-log-in"></i>
-                                <span>sign in</span>
-                            </a>
+                            {% if request.user.is_authenticated %}
+                                <a href="{% url 'logout' %}" class="header__sign-in">
+                                    <i class="icon ion-ios-log-in"></i>
+                                        <span>Выйти</span>
+                                </a>
+                            {% else %}
+                                <a href="{% url 'login' %}" class="header__sign-in">
+                                    <i class="icon ion-ios-log-in"></i>
+                                        <span>Войти</span>
+                                </a>
+                            {% endif %}
                         </div>
                         <!-- end header auth -->
 
