--- a/web_site/templates/web_site/catalog_movies.html
+++ b/web_site/templates/web_site/catalog_movies.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load web_site_tags %}
+{% load pagination_tags %}
 {% block title %}
 Каталог фильмов
 {% endblock %}
@@ -74,6 +75,7 @@
             <div class="tab-pane fade show active" id="tab-2" role="tabpanel" aria-labelledby="2-tab">
                 <div class="row">
                     <!-- card -->
+
                     {% for movie in movies %}
                     <div class="col-6 col-sm-4 col-lg-3 col-xl-2">
                         <div class="card">
@@ -99,11 +101,46 @@
                     </div>
                     <!-- end card -->
                     {% endfor %}
+                    <!-- paginator -->
+<!--				<div class="col-12">-->
+<!--					<ul class="paginator paginator&#45;&#45;list">-->
+<!--                        {% if page_obj.has_previous %}-->
+<!--                            {% if page_obj.number|add:'-3' > 1 %}-->
+
+<!--                                <li class="paginator__item">-->
+<!--                                    <a href="?page=1">1</a>-->
+<!--                                </li>-->
+<!--                            {% endif %}-->
+<!--                            {% if page_obj.number|add:'-3' >= 3 %}-->
+<!--						        <li class="paginator__item"><a href="?page={{ page_obj.previous_page_number|add:'-3' }}">• • •</a></li>-->
+<!--                            {% endif %}-->
+<!--                        {% endif %}-->
+<!--                        {% if paginator.page_range|length > 1 %}-->
+<!--                            {% for i in paginator.page_range %}-->
+<!--                                {% if page_obj.number == i %}-->
+<!--						            <li class="paginator__item paginator__item&#45;&#45;active"><a href="#">{{ i }}</a></li>-->
+<!--                                {% elif i > page_obj.number|add:'-4' and i < page_obj.number|add:'4' %}-->
+<!--						            <li class="paginator__item"><a href="?page={{ i }}">{{ i }}</a></li>-->
+<!--                                {% endif %}-->
+<!--                            {% endfor %}-->
+<!--                        {% endif %}-->
+<!--                        {% if page_obj.has_next %}-->
+<!--                            {% if page_obj.number|add:'4' < page_obj.paginator.num_pages %}-->
+<!--						        <li class="paginator__item"><a href="?page={{ page_obj.next_page_number|add:'3' }}">• • •</a></li>-->
+<!--                            {% endif %}-->
+<!--                            {% if page_obj.number|add:'3' < page_obj.paginator.num_pages %}-->
+<!--                                <li class="paginator__item"><a class="pagination__link" href="?page={{ page_obj.paginator.num_pages }}">-->
+<!--                                {{ page_obj.paginator.num_pages }}</a>-->
+<!--                                </li>-->
+<!--                            {% endif %}-->
+<!--                        {% endif %}-->
+<!--					</ul>-->
+<!--				</div>-->
+				<!-- end paginator -->
                 </div>
             </div>
 
-
-        </div>
+    </div>
         <!-- end content tabs -->
     </div>
 </section>
